[package]
name = "adieu"
version = "0.1.0"
authors = ["Ruin0x11 <ipickering2@gmail.com>"]
edition = "2021"

[dependencies]
avg32 = { path = "../avg32" }
serde = "1.0.203"
serde_derive = "1.0.203"
anyhow = "1.0.86"
lexpr = "0.2.7"
serde-lexpr = "0.1.3"
log = "0.4.22"
env_logger = "0.11.3"
clap = "2.33"

[dev-dependencies]
pretty_assertions = "1.4.0"
