[package]
name = "avg32"
version = "0.1.0"
authors = ["Ruin0x11 <ipickering2@gmail.com>"]
edition = "2021"

[dependencies]
nom = "5"
nom-trace = "0.2.1"
serde = "1.0.203"
serde_derive = "1.0.203"
encoding_rs = "0.8.34"
byteorder = "1.5.0"
anyhow = "1.0.86"

[dev-dependencies]
pretty_assertions = "1.4.0"
